development start and developed CURD operation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8001
+
+# DB configuration
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.username = root
+spring.datasource.password =root
+spring.datasource.url = jdbc:mysql://localhost:3306/blob_app_apis
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# update, create, create-drop, validate
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql=true
 
