--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,13 @@ spring.servlet.multipart.max-request-size=10MB
 
 project.image=images/
 
+logging.level.org.springframework.security=DEBUG
+
+# BASIC AUTHENTICATION
+#spring.security.user.name=yogesh
+#spring.security.user.password=yogesh
+#spring.security.user.roles=ADMIN
+
+
+
 
