--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9002
 # DB configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password =root
+spring.datasource.password =YOGkp8808@
 spring.datasource.url = jdbc:mysql://localhost:3306/blob_app_apis
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -11,7 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # update, create, create-drop, validate
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
-
 
 # File related all configuration
 spring.servlet.multipart.max-file-size=10MB
